tests/parsing/smtlib/v2.7/errors/090_get-assertions_unclosed_1.smt2
(set-logic ALL)
(get-assertions _)
